...
                    WelcomeSecondLayer()
                    WelcomeThirdLayer()
                }
                WelcomeText()
                HStack(spacing: 40) {
                    SecondaryButtonS(action: navigateToLogin, text: "welcome.login".l10n())
                        .accessibilityIdentifier("Login")
                    PrimaryButtonS(action: navigateToRegister, text: "welcome.register".l10n())
                        .accessibilityIdentifier("JoinNow")
                }.padding(.vertical, 12)
            }.ignoresSafeArea()
        }
    }
}

...
