...
//

import SwiftUI

enum AppRoute: Equatable {
    case Welcome
    case Login
    case Register
    case Verify
}

enum MagicNumberField {
    case field1
    case field2
    case field3
...
