...
                    .accessibilityIdentifier("SignIn")
                Button(action: navigateToRegister, label: {
                    CommonText(text: "login.not.a.member".l10n())
                        .foregroundColor(colorScheme == .light ? .black : .white)
                }).padding(.vertical, 16)
                    .buttonStyle(ScaleButtonStyle())
                    .accessibilityIdentifier("NotAMember")
            }.frame(width: UIScreen.screenWidth)
                .keyboardAware()
        }
    }
}

...
